recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:5: error: value update is not a member of List[Int]
		rep(i) = l(i)	
                ^